# NeuroBayesianModel

./: .gitignore  PURPOSE.md  README.md  TASKS.md  deploy.sh  dump.rdb  full_test.py  hcp.py  idbn.ipynb  llm_interaction.ipynb  logging_config.py  main.ipynb  main.py  presentation.md  profiling.py  pyproject.toml  requirements.txt  setup.cfg  siena.py  ssh-key-2024-07-20.key  ssh-key-2024-07-20.key.pub  status.md  test.py
archive/: sensitivity-emukit.rtf  uncertainty_quantifier.py
creds/: ssh-key-2024-07-22.key  ssh-key-2024-07-22.key.pub
data/processed/: connectome_behavioral.csv
logs/: 2024-07-23-15-51-findings.json  results.txt  results_20240723_032823.json  results_20240723_051807.json  results_20240723_053215.json  results_old.txt  status.json2024-07-26 23:26:09  status_2024-07-26_23-38-17.json  status_2024-07-26_23-43-05.json  status_2024-07-26_23-48-05.json  status_2024-07-26_23-49-31.json  status_2024-07-27_00-00-18.json  status_2024-07-27_00-22-57.json  terminal_results.txt
notebooks/: bayesian_network_results_20240723_213336.json  bayesian_network_results_20240723_213913.json  bayesian_network_results_20240724_035918.json  bayesian_network_results_20240724_054208.json  check.ipynb  main.ipynb
src/: __init__.py  base.py  bayesian_network.py  bayesian_node.py  celery_config.py  data_processing.py  dtypes.txt  dynamic.py  eeg.py  eeg_augmenter.py  hierarchical_network.py  idbn.py  inference.py  insights.py  main.py  main_optimized.py  model_utils.py  modeling.py  parameter_fitting.py  pipeline.py  preprocessor.py  structure_learning.py  symbolic_network.py  tasks.py  uncertainty_quantifier.py  utils.py  validation.py
tests/: connectome_test.py  generated_test.py  hcp_behavioral_test.py  main_test.py  test_bayesian_node.py  test_node_simple.py  validate.py
