[metadata]
name = bayesian_network_builder
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python package for building and analyzing Bayesian Networks using dataclasses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/bayesian_network_builder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src